--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.14.8",
+    "@mui/material": "^5.14.8",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
